--- a/Calculation.Engine/Calculation.Engine.csproj
+++ b/Calculation.Engine/Calculation.Engine.csproj
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Library\</OutputPath>
+    <OutputPath>..\Libraries\</OutputPath>
     <DefineConstants>
     </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
