--- a/Calculation.Engine/Calculation.Engine.nuspec
+++ b/Calculation.Engine/Calculation.Engine.nuspec
@@ -10,6 +10,6 @@
     </description>
     </metadata>
 	<files>
-		<file src="bin\Debug\*.dll" target="lib" />
+		<file src="obj\Release\*.dll" target="lib" />
     </files>
 </package>
