Removed version from spec file to check if it is replaced by teamcity.

--- a/Calculation.Engine/Calculation.Engine.nuspec
+++ b/Calculation.Engine/Calculation.Engine.nuspec
@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-    <id>CalculationEngine</id>
-    <version>1.0</version>
+    <id>Calculation.Engine</id>
     <authors>Zeb ur Rehman</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>
