--- a/Calculation.Engine/Calculation.Engine.nuspec
+++ b/Calculation.Engine/Calculation.Engine.nuspec
@@ -1,13 +1,16 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-    <id>Calculation.Engine</id>
-    <version>1.0</version>
-    <authors>Zeb ur Rehman</authors>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>
-        A package that has framework assemblyReferences depending on the target framework.
-    </description>
+		<id>Calculation.Engine</id>
+		<version>1.0</version>
+		<authors>Zeb ur Rehman</authors>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<description>
+			A package that has framework assemblyReferences depending on the target framework.
+		</description>
+		<frameworkAssemblies>
+			<frameworkAssembly assemblyName="System" targetFramework="net40" />
+		</frameworkAssemblies>
     </metadata>
 	<files>
 		<file src="obj\Release\*.dll" target="lib" />
